labs/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:17:36 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: 1_Web_Client
Invoking: GCC C++ Linker
g++  -o "1_Web_Client"  ./main.o   
Finished building target: 1_Web_Client
 
22:22:47 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
make: Nothing to be done for `all'.
22:24:05 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
make: Nothing to be done for `all'.
22:24:27 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
make: Nothing to be done for `all'.
22:27:17 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: 1_Web_Client
Invoking: GCC C++ Linker
g++  -o "1_Web_Client"  ./main.o   
Finished building target: 1_Web_Client
 
22:47:07 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
In file included from ../main.cpp:5:0:
../Downloader.h: In member function ‘bool Downloader::sendRequest()’:
../Downloader.h:76:41: error: invalid conversion from ‘const char*’ to ‘char*’ [-fpermissive]
   char* request = reqStream.str().c_str();
                                         ^
make: *** [main.o] Error 1
22:47:26 **** Incremental Build of configuration Debug for project 1_Web_Client ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: 1_Web_Client
Invoking: GCC C++ Linker
g++  -o "1_Web_Client"  ./main.o   
Finished building target: 1_Web_Client
 
